--- a/travis.yml
+++ b/travis.yml
@@ -2,11 +2,8 @@
 language: node_js
 node_js: 
   - "stable"
-cache:
-  directories:
-    - "node_modules"
+# cache:
+#   directories:
+#     - "node_modules"
 
-    branches:
-      only:
-        -master
-        -percydev
+    
