--- a/travis.yml
+++ b/travis.yml
@@ -1,9 +1,10 @@
 
 language: node_js
 node_js: 
-  - "stable"
-# cache:
-#   directories:
-#     - "node_modules"
+  - node
+
+  install:
+   -npm ci
+
 
     
