--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,22 @@
 
+sudo: false
 language: node_js
 node_js: 
   - "12.11.1"
 
-  install:
+ branches:
+   only:
+   - master
+
+   cache:
+   directories:
+   -node_modules
+  
+   before_install:
+   install:
    -npm install
+   script:
+   -npm test
 
 
     
