--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,16 @@
-
-sudo: false
 language: node_js
 node_js: 
-  - "12.11.1"
+  - "12"
 
  branches:
    only:
    - master
 
-   cache:
-   directories:
-   -node_modules
-  
    before_install:
-   install:
-   -npm install
+    install:
+   - npm update
    script:
-   -npm test
+   - npm test
 
 
     
